--- a/css/base.css
+++ b/css/base.css
@@ -1,40 +1,48 @@
-body{
+#horn-template {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+
+img {
+  display: flex;
+  height:200px;
+  width:200px;
+  }
+
+body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
-
-h1{
+h1 {
 font-size:100px;
 font-family: 'Oldenburg', cursive;
-clear:both;
+text-align: center;
 }
 
-h2{
+h2 {
   font-family: 'Oldenburg', cursive;
+  font-size:10px;
 }
-select{
+
+button {
+  height:30px;
+  width:150px;
+}
+
+/* select {
   margin: 10px;
   font-family: 'Oldenburg', cursive;
   text-align: center;
   width:200px;
   clear:both;
-}
-section{
-  margin:10px;
-  display: inline-block
-}
-img{
-height:150px;
-width:150px;
-}
-h2{
-font-size:10px;
+} */
 
-}
 
-button{
-  height:30px;
-  width:150px;
+section {
+  border: solid red 1px;
+  display: inline-block;
 }
