--- a/css/base.css
+++ b/css/base.css
@@ -1,17 +1,21 @@
-#horn-template {
+img {
+  height:200px;
+  width:200px;
+  }
+
+main {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
 }
 
+section {
+  height: 300px;
+  width: 250px;
+  /* border: 1px solid grey; */
+}
 
-img {
-  display: flex;
-  height:200px;
-  width:200px;
-  }
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -33,16 +37,10 @@ button {
   width:150px;
 }
 
-/* select {
+select {
   margin: 10px;
   font-family: 'Oldenburg', cursive;
   text-align: center;
   width:200px;
   clear:both;
-} */
-
-
-section {
-  border: solid red 1px;
-  display: inline-block;
 }
